--- a/Sources/AHeadLib.Net/Properties/Templates/vcxprojTemplate.filters
+++ b/Sources/AHeadLib.Net/Properties/Templates/vcxprojTemplate.filters
@@ -7,10 +7,10 @@
     <ClCompile Include="Utils/MiniTools.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles/${LIB_NAME}.c">
+    <ClCompile Include="GeneratedFiles/${LIB_NAME}.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles/${LIB_NAME}_DllMain.c">
+    <ClCompile Include="GeneratedFiles/${LIB_NAME}_DllMain.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="GeneratedFiles/BuiltinImplementations.cpp">
